plugins {
  id 'java'
  id 'org.springframework.boot' version '4.0.3'
  id 'io.spring.dependency-management' version '1.1.7'
  id "com.diffplug.spotless" version "8.2.1"
  id 'checkstyle'
}

group = 'aros.services'
version = '2.1.0' // x-releaser-pleaser-version
description = 'Robust, scalable API that processes restaurant operations in real-time and transforms data into actionable business insights.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

import org.apache.tools.ant.filters.ReplaceTokens

def appVersion = project.version
processResources {
    filesMatching('**/application*.yml') {
        filter ReplaceTokens, tokens: [('project.version'): appVersion]
    }
}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.incremental = false
    // options.compilerArgs += ['--enable-preview']
}

repositories {
	mavenCentral()
}

//dependencyManagement {
//    imports {
//        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:7.4.5"
//    }
//}

dependencies {
	// Lombok (annotation processing)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Database Migration
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-mysql'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Spring Boot Starters (Core)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Security & OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	// Observability
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Retry & Aspects
	implementation 'org.springframework.retry:spring-retry:2.0.10'
	implementation 'org.springframework:spring-aspects'

	// Distributed scheduled-task lock (Plan 05: monthly closing runs once per cluster)
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.16.0'

	// Documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

	// Cloud SQL
	implementation 'com.google.cloud.sql:mysql-socket-factory-connector-j-8:1.28.2'

	// Image Processing & GCS - using core GCS lib to avoid Cloud SQL auto-config
	implementation 'com.google.cloud:google-cloud-storage:2.49.0'
	implementation 'com.sksamuel.scrimage:scrimage-core:4.3.10'
	implementation 'com.sksamuel.scrimage:scrimage-webp:4.3.10'

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// Development Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Embedded DB for persistence tests
	testImplementation 'com.h2database:h2'
}

// to load .env files
def envFile = new File(project.projectDir, ".env")
def envVars = [:]
if (envFile.exists()) {
    envFile.readLines().each { line ->
        if (line && !line.startsWith('#') && line.contains('=')) {
            def parts = line.split('=', 2)
            def key = parts[0].trim()
            def value = parts[1].trim()
            envVars[key] = value
        }
    }
}

tasks.named('test') {
	useJUnitPlatform()

	// Force XML output for test results (workaround for Gradle 9 binary results file race)
	systemProperty 'junit.platform.reporting.open.xml.enabled', 'true'

	// Allow env var reflection for JwksControllerRotationIT
	jvmArgs += [
		'--add-opens', 'java.base/java.lang=ALL-UNNAMED'
	]

    envVars.each { key, value ->
        environment key, value
    }
}

bootRun {
    envVars.each { key, value ->
        environment key, value
    }
}

// formater config

spotless {
  java {
    importOrder()
    removeUnusedImports()
    forbidWildcardImports()
    forbidModuleImports()
    cleanthat()
    googleJavaFormat()
  }
}

checkstyle {
  configFile = file("$project.rootDir/gradle/checkstyle/google_checks.xml")
  toolVersion = '13.4.1'
  ignoreFailures = false
}

tasks.register("generate-jwt-keys") {
    doLast {
        def keyGen = java.security.KeyPairGenerator.getInstance("RSA")
        keyGen.initialize(2048)
        def keyPair = keyGen.generateKeyPair()

        // Convert to PEM format
        def publicKeyPem = "-----BEGIN PUBLIC KEY-----\n" + 
            Base64.getEncoder().encodeToString(keyPair.public.encoded) + 
            "\n-----END PUBLIC KEY-----"
        def privateKeyPem = "-----BEGIN PRIVATE KEY-----\n" + 
            Base64.getEncoder().encodeToString(keyPair.private.encoded) + 
            "\n-----END PRIVATE KEY-----"

        println ""
        println "=== JWT Keys Generated ==="
        println "Add these to your .env file:"
        println ""
        println "JWT_PUBLIC_KEY=${publicKeyPem.replace('\n', '\\n')}"
        println "JWT_PRIVATE_KEY=${privateKeyPem.replace('\n', '\\n')}"
        println ""
    }
}
